--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
     sdk: flutter
   sqflite: ^2.3.3
   path: ^1.9.0
-  intl: ^0.19.0
+  intl: 0.20.2
   fl_chart: ^0.68.0
   table_calendar: ^3.1.3
   easy_localization: ^3.0.5
+  shared_preferences: ^2.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
